add_library(accessories INTERFACE)

target_sources(accessories INTERFACE
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/VStudio/PCA9505_9506.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/VStudio/ShiftRegister74HC595.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/VStudio/pch.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/VStudio/SparkFunSX1509.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/VStudio/Adafruit_MCP23017.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/VStudio/ArduinoIno.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortSpeedDirBrake.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortOnePin.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/Accessories.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortStepper.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryGroup.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryMotorOneWay.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AFMotor.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryLight.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortExpanderMCP23017.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortExpanderPCA9505_06.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/Port.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryStepper.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortExpander.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/LocoStepper.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoriesCircularBuffer.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/Accessory.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryMotorTwoWays.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryBaseLight.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortShieldL293d.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryServo.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortServo.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortExpanderSX1509.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/ActionsStack.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryMotor.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortTwoPins.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryLightMulti.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortTwoPinsEnable.cpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/VStudio/ShiftRegister74HC595.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryBaseLight.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryServo.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryMotorOneWay.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryStepper.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/ActionsStack.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortOnePin.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AFMotor.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryMotor.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryLightMulti.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortExpander74HC595.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortSpeedDirBrake.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/Port.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortShieldL293d.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/Accessories.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortStepper.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/Chain.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortExpanderMCP23017.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/Accessory.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoriesCircularBuffer.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortServo.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortTwoPins.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryGroup.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryLight.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortExpander.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortExpanderSX1509.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortExpanderPCA9505_06.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/AccessoryMotorTwoWays.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortTwoPinsEnable.hpp"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/VStudio/PCA9505_9506.h"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/VStudio/pch.h"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/VStudio/ShiftRegister74HC595.h"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/VStudio/SparkFunSX1509.h"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/VStudio/Adafruit_MCP23017.h"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/Accessories.h"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/LocoStepper.h"
  "${CMAKE_CURRENT_LIST_DIR}/Accessories/src/PortExpander74HC595.h"
)

target_include_directories(accessories INTERFACE
 "${CMAKE_CURRENT_LIST_DIR}/Accessories/src"
)

if (NOT TARGET arduino-compat)
    add_subdirectory(../../arduino-compat build_arduino-compat)
endif()

target_link_libraries(accessories INTERFACE
    arduino-compat
)
